--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
         var i = 0
         while (i<number) {
-            document.write("<img src='./image/funny.png' height='' weight='' alt='' />");
+            document.write("<img src='./image/funny.png' height='200' weight='200' alt='' />");
             i++;
         }
     </script>
